# savagealexander-BitSyS-trade-V3

./: accounts.json  idempotency.json  leader_credentials.json  pyproject.toml  readme.md  requirements.txt
api/: follower_accounts.py
client-win/: package.json  tsconfig.json  vite.config.ts
client-win/src/: api.ts  config.json  config.ts  index.html  main.ts  renderer.ts
fastapi/: __init__.py  core.py  testclient.py
pydantic/: __init__.py  main.py
server/: accounts.py  api.py  balances.py  copy_dispatcher.py  idempotency.py  leader_watcher.py  main.py  models.py  storage.py
server/connectors/: __init__.py  binance.py  binance_sdk_connector.py  bitget.py
services/: follower_account_service.py  leader_ws.py
tests/: conftest.py  test_balance_service.py  test_bitget_balances.py  test_bitget_connector.py  test_copy_dispatcher_sdk.py  test_copy_results.py  test_copy_status.py  test_dispatcher_zero_amount.py  test_follower_accounts.py  test_leader_config.py  test_leader_watcher_envelopes.py  test_leader_watcher_pre_balance.py  test_leader_ws.py
