[project]
name = "bitsys-trade"
version = "0.1.0"
description = "Skeleton backend for copy trading service"
authors = [{name = "BitSyS"}]
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.0"
httpx = "^0.27.0"
websockets = "^12.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
